Changed the height on projectul li's from 100vh to auto to test if this resolves issues with overflow in landscape mode

--- a/src/App.css
+++ b/src/App.css
@@ -827,7 +827,7 @@ a {
       list-style-type: none; }
       .project-section ul li {
         padding-bottom: 10em;
-        height: 100vh; }
+        height: auto; }
       .project-section ul p {
         width: 100%;
         margin: auto;
@@ -842,6 +842,12 @@ a {
       height: 250px;
       width: 100%; } }
 
+/*@media only screen and (orientation:landscape) and (max-width: 300px) {
+  body {
+    background-color: red;
+  }
+}
+*/
 /* Small Devices, Tablets */
 @media only screen and (min-width: 768px) {
   .project-section {
